[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tsar-client = "0.0.8"
eframe = "0.27.2"
goldberg = "0.1.0"
rainbow-text = "0.1.5"

# Anti-debug Release
[profile.release]
stack-protector = true
strip = "symbols"
panic = "abort"
opt-level = 3
debug = false
lto = true
cfi = true
