[package]
name = "rust-demo"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
tsar-client = "0.1.0-alpha.1"
eframe = "0.27.2"
goldberg = "0.1.0"

# Anti-debug Release
[profile.release]
stack-protector = true
strip = "symbols"
panic = "abort"
opt-level = 3
debug = false
lto = true
cfi = true
